# travel-planner

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 879b79e2d169_.py
src/travel_planner/: main.py
src/travel_planner/api/middleware/: __init__.py  exceptions.py
src/travel_planner/api/utils/: result.py
src/travel_planner/api/v1/: router.py
src/travel_planner/api/v1/endpoints/: place.py  project.py
src/travel_planner/api/v1/schemas/: place.py  project.py
src/travel_planner/application/dtos/: __init__.py  http.py  place.py  project.py  result.py
src/travel_planner/application/enums/: __init__.py  error.py
src/travel_planner/application/exceptions/: __init__.py  base.py  http.py  persistence.py
src/travel_planner/application/interfaces/: __init__.py  http_client.py  place_gateway.py  uow.py
src/travel_planner/application/messages/: __init__.py  errors.py
src/travel_planner/application/use_cases/: __init__.py  place.py  project.py
src/travel_planner/application/utils/: __init__.py  exceptions.py
src/travel_planner/config/: __init__.py  exception.py  settings.py
src/travel_planner/domain/entities/: __init__.py  place.py  project.py
src/travel_planner/domain/exceptions/: __init__.py  base.py  project.py
src/travel_planner/domain/repositories/: __init__.py  place_repository.py  project_repository.py
src/travel_planner/infrastructure/gateways/: __init__.py  artic_place_gateway.py
src/travel_planner/infrastructure/transport/: __init__.py  httpx_client.py
(+10 files in other folders)
